[gd_scene load_steps=8 format=3 uid="uid://dxwcc2qhm32do"]

[ext_resource type="Script" uid="uid://d3l03mlnckmrp" path="res://scripts/players_choice.gd" id="1_runnj"]
[ext_resource type="FontFile" uid="uid://oy5cqo7iv8gg" path="res://assets/PixelOperator8-Bold.ttf" id="2_7007v"]
[ext_resource type="FontFile" uid="uid://m8fsnwreikvx" path="res://assets/PixelOperator8.ttf" id="3_xyydp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_88qnp"]
bg_color = Color(0.358243, 0.670757, 0.627228, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2oba0"]
bg_color = Color(0.494118, 0.815686, 0.768627, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kf5ho"]
bg_color = Color(0.697918, 0.261452, 0.815069, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6al6y"]
bg_color = Color(0.796078, 0.423529, 0.901961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="PlayersChoice" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 727.0
offset_bottom = 1282.0
script = ExtResource("1_runnj")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 719.0
offset_bottom = 1283.0
color = Color(0.0313726, 0.0745098, 0.109804, 1)

[node name="TruthButton" type="Button" parent="."]
layout_mode = 0
offset_left = 121.0
offset_top = 465.0
offset_right = 333.0
offset_bottom = 562.0
theme_override_fonts/font = ExtResource("2_7007v")
theme_override_font_sizes/font_size = 28
theme_override_styles/hover = SubResource("StyleBoxFlat_88qnp")
theme_override_styles/normal = SubResource("StyleBoxFlat_2oba0")
text = "TRUTH"

[node name="DareButton" type="Button" parent="."]
layout_mode = 0
offset_left = 376.0
offset_top = 465.0
offset_right = 588.0
offset_bottom = 562.0
theme_override_fonts/font = ExtResource("2_7007v")
theme_override_font_sizes/font_size = 28
theme_override_styles/hover = SubResource("StyleBoxFlat_kf5ho")
theme_override_styles/normal = SubResource("StyleBoxFlat_6al6y")
text = "DARE
"

[node name="TurnLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 75.0
offset_top = 362.0
offset_right = 659.0
offset_bottom = 424.0
theme_override_constants/line_spacing = 2
theme_override_fonts/font = ExtResource("3_xyydp")
theme_override_font_sizes/font_size = 24
text = "Player 1, choose truth or dare"
horizontal_alignment = 1
autowrap_mode = 3

[connection signal="pressed" from="TruthButton" to="." method="_on_truth_button_pressed"]
[connection signal="pressed" from="DareButton" to="." method="_on_dare_button_pressed"]
